--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="container">
+<!--      Nice use of a semantic HTML tag! I think you could replace more of your div tags with tags that describe what the content is.    -->
         <nav>
             <div class="name">
                 <h1>Talía Pichardo</h1>
@@ -25,9 +26,11 @@
         <div class="self-img">
             <img src="imgs/Pursuit 7.0 - Talia Pichardo.jpg" alt="image of myself" id="self">
         </div>
+<!--     This could be a section tag, for instance!     -->
         <div class="about-me">
             <p id="about-me-paras">
                 <span id="hello"> Hi! I'm Talía. I like to code!</span> 
+<!--        IMO it's nicer to use CSS to control spacing, rather than breaks          -->
                 <br>
                 <br>
                 As a NYC-based software engineer, I'm discovering that I love the process of creating clean code and
@@ -79,6 +82,7 @@
                     </p>
                 </div>
             </div>
+<!--      Why did you choose to wrap the h2 in a div?       -->
             <div id="skills" class="section-title1">
                 <h2>Skills</h2>
             </div>
@@ -109,6 +113,7 @@
                 <img class="logos2" src="imgs/email-svgrepo-com.svg" alt="email logo">
             </a>
         </div>
+<!--    You can remove the footer if it's not used for anything!      -->
         <footer>
         </footer>
     </div>
