--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="self-img">
             <img src="imgs/Pursuit 7.0 - Talia Pichardo.jpg" alt="image of myself" id="self">
         </div>
-        <div class="about-me">
+        <section class="about-me">
             <p id="about-me-paras">
                 <span id="hello"> Hi! I'm Talía. I like to code!</span> 
                 <br>
@@ -38,7 +38,7 @@
                 We all think differently, and software development encourages these differences and makes them work
                 together to create amazing outcomes.
             </p>
-        </div>
+        </section>
             <div id="projects" class="section-title">
                 <h2>Projects</h2>
             </div>
@@ -51,11 +51,11 @@
                     <img src="imgs/Just Breathe Text Based Adventure.gif" alt="image of text based adventure game">
                 </div>
                 <div class="description-one">
-                    <div>
-                        <div class="expand-btn">
-                            <button id="expand-btn-one" type="button">Show More</button>
-                        </div>
-                        <p class="project-one-description">
+                    <div class="description-one">
+                        <button id="expand-btn-one" type="button">Show More</button>
+                    </div>
+                    <div class="project-one-description">
+                        <p>
                             A command line application that allows player to play a creepy Saw-like game!
                         </p>
                     </div>
@@ -109,8 +109,6 @@
                 <img class="logos2" src="imgs/email-svgrepo-com.svg" alt="email logo">
             </a>
         </div>
-        <footer>
-        </footer>
     </div>
 </body>
 
