adding more semantic HTML tags

--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
                     <h3>Just Breathe</h3>
                 </a>
                 <br>
-                <div class="project-img-one">
+                <figure class="project-img-one">
                     <img src="imgs/Just Breathe Text Based Adventure.gif" alt="image of text based adventure game">
-                </div>
+                </figure>
                 <div class="description-one">
                     <div class="description-one">
                         <button id="expand-btn-one" type="button">Show More</button>
                     </div>
-                    <div class="project-one-description">
-                        <p>
+                    <details class="project-one-description">
+                        <summary>
                             A command line application that allows player to play a creepy Saw-like game!
-                        </p>
-                    </div>
+                        </summary>
+                    </details>
                 </div>
             </div>
             <div class="snow-man">
@@ -66,23 +66,23 @@
                     <h3>Snowman</h3>
                 </a>
                 <br>
-                <div class="project-img-two">
+                <figure class="project-img-two">
                     <img src="imgs/Snowman.gif" alt="Gif of snowman game">
-                </div>
+                </figure>
                 <div class="description-two">
                     <button id="expand-btn-two" type="button">Show More</button>
                 </div>
-                <div class="project-two-description">
-                    <p>
+                <details class="project-two-description">
+                    <summary>
                         Object oriented command line application that allows player to play the popular guessing game
                         known as hangman.
-                    </p>
-                </div>
+                    </summary>
+                </details>
             </div>
             <div id="skills" class="section-title1">
                 <h2>Skills</h2>
             </div>
-            <div class="skills-imgs">
+            <section class="skills-imgs">
                 <img id="logo" src="imgs/html5-svgrepo-com.svg" alt="HTML logo">
                 <img id="logo" src="imgs/css-3-logo-svgrepo-com.svg" alt="CSS logo">
                 <img id="logo" src="imgs/javascript-logo-svgrepo-com.svg" alt="JavaScript logo">
@@ -90,12 +90,12 @@
                 <img id="logo" src="imgs/react-logo-svgrepo-com.svg" alt="React logo">
                 <img id="logo" src="imgs/redux-logo-svgrepo-com.svg" alt="Redux logo">
                 <img id="logo" src="imgs/postgresql-logo-svgrepo-com.svg" alt="postgresql logo">
-            </div>
+            </section>
     
         <div id="contact" class="section-title2">
             <h2>Stay in touch!</h2>
         </div>
-        <div class="contact-imgs">
+        <section class="contact-imgs">
             <a href="https://linkedin.com/in/taliapichardo" target="_blank">
                 <img class="logos2" src="imgs/linkedin-svgrepo-com.svg" alt="LinkedIn logo">
             </a>
@@ -108,7 +108,7 @@
             <a href="mailto:taliapichardo@pursuit.org">
                 <img class="logos2" src="imgs/email-svgrepo-com.svg" alt="email logo">
             </a>
-        </div>
+        </section>
     </div>
 </body>
 
